--- a/rebar.config
+++ b/rebar.config
@@ -17,6 +17,6 @@
 {ct_use_short_names, false}.
 
 {deps, [
-        {mongodb, ".*", {git, "https://github.com/congleetea/mongodb.git",{tag, "v0.7.9"}}},
-        {poolboy, "1.5.*", {git, "https://github.com/devinus/poolboy.git", {tag, "1.5.1"}}}
+        {mongodb, ".*", {git, "https://github.com/comtihon/mongodb-erlang.git",{tag, "v3.0.1"}}},
+        {poolboy, ".*", {git, "https://github.com/congleetea/poolboy.git", {branch, "master"}}}
 ]}.
